--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@types/google-spreadsheet": "^3.3.2",
+    "@types/node": "^20.3.1",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "google-spreadsheet": "^3.3.0",
+    "googleapis": "^118.0.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-gesture-handler": "^2.11.0",
