--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
@@ -17,11 +18,14 @@
     "axios": "^1.4.0",
     "cheerio": "^1.0.0-rc.12",
     "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "expo-status-bar": "^1.6.0",
+    "expo-updates": "~0.16.4",
     "google-spreadsheet": "^3.3.0",
     "googleapis": "^118.0.0",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-calendar-strip": "^2.2.6",
+    "react-native-calendars": "^1.1300.0",
     "react-native-gesture-handler": "^2.11.0",
     "react-native-reanimated": "^3.2.0",
     "react-native-safe-area-context": "^4.5.3",
